--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,5 +1,5 @@
 <h2>Community</h2>
 
 <div class="well" *ngFor="let user of users | async">
-    <h3 (click)="goToUserDetails(user)"><em>{{user.name}}</em>: {{user.email}}</h3>
+    <h3><strong><span class="nameLink"(click)="goToUserDetails(user)">{{user.name}}</span></strong><small> {{user.email}}</small></h3>
 </div>
