--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,2 +1,4 @@
-<h2>Name: {{userToDisplay.name}}</h2>
-<h2>Email: {{userToDisplay.email}}</h2>
+<div>
+  <h2>Name: {{(userToDisplay | async)?.name}}</h2>
+  <h2>Email: {{(userToDisplay | async)?.email}}</h2>
+</div>
