--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -19,9 +19,10 @@
       </div>
     </div>
   </div>
-  <div class="col-md-8">
-    <div class="well" *ngFor="let user of users | async">
-        <h3><strong><span class="nameLink"(click)="goToUserDetails(user)">{{user.name}}</span></strong><small> {{user.email}}</small></h3>
-    </div>
+  <div class="col-md-4">
+
+  </div>
+  <div class="col-md-5">
+    <app-community></app-community>
   </div>
 </div>
