--- a/src/styles.css
+++ b/src/styles.css
@@ -28,14 +28,14 @@ header {
 }
 
 .nameLink {
-  color: blue;
+  text-shadow: 1px 1px 1px rgb(255, 124, 2);
   font-family: 'Slabo 27px', serif;
   font-weight: 500;
   font-size: 30px;
 }
 
 .nameLink:hover {
-  text-shadow: 2px 2px 5px gray;
+  text-shadow: 2px 2px 10px rgb(255, 124, 2);
   font-weight: bolder;
   cursor: pointer;
 }
