add currentUrl properties for all components

--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,4 +1,4 @@
-<h2>Community</h2>
+<h2 id="communityTitle">Community</h2>
 
 <div class="well" *ngFor="let user of users | async">
     <h3><strong><span class="nameLink"(click)="goToUserDetails(user)">{{user.name}}</span></strong><small> {{user.email}}</small></h3>
