css styling for community and users

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <a class="text-muted" routerLink="admin">Admin</a>
 </header>
 <div class="container">
-  <h1 id="title">{{title}}</h1>
+  <h1 id="title"><span id="lostTitle">Lost</span> <span id="andTitle">and</span> <span id="foundTitle">Found</span></h1>
   <router-outlet></router-outlet>
 </div>
 <footer><a id="footerAbout" routerLink="about">About</a> <a id="footerHome" routerLink="">Home</a> <a id="footerCommunity" routerLink="community">Community</a></footer>
