--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,36 +1,35 @@
 <div class="row">
   <div class="col-md-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="addNewUserHeader">Add New User</h3>
-      </div>
-      <div class="panel-body">
-        <div>
-          <label>New User Name:</label>
-          <br>
-          <input #newName>
+    <div id="newUserForm">
+      <div class="panel">
+        <div class="panel-heading">
+          <h3 class="addNewUserHeader">Add New User</h3>
         </div>
-        <div>
-          <label>New User Email:</label>
-          <br>
-          <input #newEmail>
+        <div class="panel-body">
+          <div>
+            <label>New User Name:</label>
+            <br>
+            <input #newName>
+          </div>
+          <div>
+            <label>New User Email:</label>
+            <br>
+            <input #newEmail>
+          </div>
+          <div>
+            <label>Admin?</label>
+            <br>
+            <select #newStatus>
+              <option value="true">True</option>
+              <option value="false">False</option>
+            </select>
+          </div><br>
+          <button (click)="submitForm(newName.value, newEmail.value, newStatus.value); newName.value=''; newEmail.value=''; newStatus.value=''">Add New User</button>
         </div>
-        <div>
-          <label>Admin?</label>
-          <br>
-          <select #newStatus>
-            <option value="true">True</option>
-            <option value="false">False</option>
-          </select>
-        </div><br>
-        <button (click)="submitForm(newName.value, newEmail.value, newStatus.value); newName.value=''; newEmail.value=''; newStatus.value=''">Add New User</button>
       </div>
     </div>
   </div>
-  <div class="col-md-4">
-
-  </div>
-  <div class="col-md-5">
+  <div class="col-md-9">
     <app-community></app-community>
   </div>
 </div>
