--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,2 @@
-<p>
-  Hello, friend!
-</p>
+<img id="stuff" src="../assets/stuff.jpeg" alt="Get your stuff back.">
+<p id="sloganWelcome">Get Your Stuff<br> Back</p>
