add css and img to about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,5 @@
-<h2>About Long Lost Friends</h2>
-<p>Welcome to Long Lost Friends. LLF is the fruit of a dream I had long ago.</p>
+<div id="about" class="container">
+  <h2 id="aboutTitle">About Lost and Found</h2>
+  <p id="aboutContent">Welcome to Lost and Found. Lost and Found gives a platform to the generosity of everyday people within our communities. Post anything on our site; with a location tag; whether it be lost or found. Then let the Lost and Found community do the rest!</p>
+  <img id="dog" src="../assets/dog.jpg" alt="Dog reunited with owner">
+</div>
